force-app/main/default/objects/Shishya__c.object
<CustomObject>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GuruNum__c</fullName>
        <label>GuruNum</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GuruShishya__c</fullName>
        <label>Guru</label>
        <referenceTo>Guru__c</referenceTo>
        <relationshipLabel>Shishya</relationshipLabel>
        <relationshipName>GuruShishya</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Speciality__c</fullName>
        <label>Speciality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>School</fullName>
                    <default>true</default>
                    <label>School</label>
                </value>
                <value>
                    <fullName>Graduate</fullName>
                </value>
                <value>
                    <fullName>Post Graduate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Shishya</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GuruShishya__c</columns>
        <columns>Completed__c</columns>
        <columns>Speciality__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Shishya Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shishya</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>